--- a/web/shopping.html
+++ b/web/shopping.html
@@ -31,97 +31,97 @@
 					<img src="Dogman_and_Catkid.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="Dragons_Love_Tacos" name="Dragons_Love_Tacos" style="width:100%">
+					<input type="checkbox" name="books[]" id="Dragons_Love_Tacos" value="Dragons_Love_Tacos" style="width:100%">
 					<img  src="Dragons_Love_Tacos.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="From_the_Heart_of_Africa" name="From_the_Heart_of_Africa" style="width:100%">
+					<input type="checkbox" name="books[]" id="From_the_Heart_of_Africa" value="From_the_Heart_of_Africa" style="width:100%">
 					<img src="From_the_Heart_of_Africa.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="Harry_Potter" name="Harry_Potter" style="width:100%">
+					<input type="checkbox" name="books[]" id="Harry_Potter" value="Harry_Potter" style="width:100%">
 					<img src="Harry_Potter.jpg">
 				</label>
 			  </div>
 			  <div class="column">
 				<label>
-					<input type="checkbox" name="books[]" id="Here_We_Are" name ="Here_We_Are" style="width:100%">
+					<input type="checkbox" name="books[]" id="Here_We_Are" value="Here_We_Are" style="width:100%">
 					<img  src="Here_We_Are.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="If_Animals_Kissed_Goodnight" name="If_Animals_Kissed_Goodnight" style="width:100%">
+					<input type="checkbox" name="books[]" id="If_Animals_Kissed_Goodnight" value="If_Animals_Kissed_Goodnight" style="width:100%">
 					<img  src="If_Animals_Kissed_Goodnight.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="Little_Blue_Truck" name="Little_Blue_Truck" style="width:100%">
+					<input type="checkbox" name="books[]" id="Little_Blue_Truck" value="Little_Blue_Truck" style="width:100%">
 					<img src="Little_Blue_Truck.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="Little_Leaders" name="Little_Leaders" style="width:100%">
+					<input type="checkbox" name="books[]" id="Little_Leaders" value="Little_Leaders" style="width:100%">
 					<img src="Little_Leaders.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="Llama_Llama_I_Love_You" name="Llama_Llama_I_Love_You" style="width:100%">
+					<input type="checkbox" name="books[]" id="Llama_Llama_I_Love_You" value="Llama_Llama_I_Love_You" style="width:100%">
 					<img  src="Llama_Llama_I_Love_You.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="Love" name="Love" style="width:100%">
+					<input type="checkbox" name="books[]" id="Love" value="Love" style="width:100%">
 					<img  src="Love.jpg">
 				</label>
 			  </div>  
 			  <div class="column">
 				<label>
-					<input type="checkbox" name="books[]" id="Oh_The_Places_Youll_Go" name="Oh_The_Places_Youll_Go" style="width:100%">
+					<input type="checkbox" name="books[]" id="Oh_The_Places_Youll_Go" value="Oh_The_Places_Youll_Go" style="width:100%">
 					<img  src="Oh_The_Places_Youll_Go.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="Princess_Pulverizer" name="Princess_Pulverizer" style="width:100%">
+					<input type="checkbox" name="books[]" id="Princess_Pulverizer" value="Princess_Pulverizer" style="width:100%">
 					<img  src="Princess_Pulverizer.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="Rosie_Revere_Engineer" name="Rosie_Revere_Engineer" style="width:100%">
+					<input type="checkbox" name="books[]" id="Rosie_Revere_Engineer" value="Rosie_Revere_Engineer" style="width:100%">
 					<img  src="Rosie_Revere_Engineer.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="Royal_Rabbits_of_London" name="Royal_Rabbits_of_London" style="width:100%">
+					<input type="checkbox" name="books[]" id="Royal_Rabbits_of_London" value="Royal_Rabbits_of_London" style="width:100%">
 					<img  src="Royal_Rabbits_of_London.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="She_Persisted" name="She_Persisted" style="width:100%">
+					<input type="checkbox" name="books[]" id="She_Persisted" value="She_Persisted" style="width:100%">
 					<img  src="She_Persisted.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="The_Day_The_Crayons_Quit" name="The_Day_The_Crayons_Quit" style="width:100%">
+					<input type="checkbox" name="books[]" id="The_Day_The_Crayons_Quit" value="The_Day_The_Crayons_Quit" style="width:100%">
 					<img  src="The_Day_The_Crayons_Quit.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="The_Giving_Tree" name="The_Giving_Tree" style="width:100%">
+					<input type="checkbox" name="books[]" id="The_Giving_Tree" value="The_Giving_Tree" style="width:100%">
 					<img  src="The_Giving_Tree.jpg">
 				</label>
 			  </div>
 			  <div class="column">
 				<label>
-					<input type="checkbox" name="books[]" id="The_Pink_Umbrella" name="The_Pink_Umbrella" style="width:100%">
+					<input type="checkbox" name="books[]" id="The_Pink_Umbrella" value="The_Pink_Umbrella" style="width:100%">
 					<img  src="The_Pink_Umbrella.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="The_Pout_Pout_Fish" name="The_Pout_Pout_Fish" style="width:100%">
+					<input type="checkbox" name="books[]" id="The_Pout_Pout_Fish" value="The_Pout_Pout_Fish" style="width:100%">
 					<img  src="The_Pout_Pout_Fish.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="The_Wonderful_Things_You_Will_Be" name="The_Wonderful_Things_You_Will_Be" style="width:100%">
+					<input type="checkbox" name="books[]" id="The_Wonderful_Things_You_Will_Be" value="The_Wonderful_Things_You_Will_Be" style="width:100%">
 					<img  src="The_Wonderful_Things_You_Will_Be.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="Wonder" name="Wonder" style="width:100%">
+					<input type="checkbox" name="books[]" id="Wonder" value="Wonder" style="width:100%">
 					<img src="Wonder.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="The_One_and_Only_Ivan" name="The_One_and_Only_Ivan" style="width:100%">
+					<input type="checkbox" name="books[]" id="The_One_and_Only_Ivan" value="The_One_and_Only_Ivan" style="width:100%">
 					<img  src="The_One_and_Only_Ivan.jpg">
 				</label>
 				<label>
-					<input type="checkbox" name="books[]" id="The_Book_With_No_Pictures" name="The_Book_With_No_Pictures" style="width:100%">
+					<input type="checkbox" name="books[]" id="The_Book_With_No_Pictures" value="The_Book_With_No_Pictures" style="width:100%">
 					<img  src="The_Book_With_No_Pictures.jpg">
 				</label>
 			  </div>
