--- a/public/form.html
+++ b/public/form.html
@@ -4,7 +4,7 @@
 	<title>Postal Rate Calculator</title>
 </head>
 <body>
-	<h1>Math Submission Form</h1>
+	<h1>Postal Rate Calculator</h1>
 	<form action="/math" method="get">
 		<select name="operation">
 			<option>Letters(Stamped)</option>
